# django-kubernetes

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yaml  release.yaml  tests.yaml
djk8s/: apps.py  conf.py  middleware.py  probes.py  urls.py  views.py
djk8s/management/commands/: ensureadmin.py  lockedmigrate.py  probe.py  wait4db.py
docs/: api.md  commands.md  conf.py  index.rst  probes.md  requirements.txt  settings.md  setup.md
docs/api/: commands.rst  conf.rst  index.rst  middleware.rst  probes.rst  views.rst
tests/: probes.py  requirements.txt  settings.py  test_conf.py  test_middleware.py  test_views.py  urls.py
