[build-system]
requires = ["setuptools>=69.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-kubernetes"
version = "0.1.0"
dependencies = [
    "django>=5.0",
]
description = "Middleware for Kubernetes probes and Django management commands for Kubernetes jobs."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
authors = [
    {name = "Rotational Labs", email = "support@rotational.io"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = [
    "django",
    "kubernetes",
    "liveness",
    "readiness",
    "probes",
    "health checks",
    "migrations",
    "management commands",
    "ensure admin user",
]

[project.urls]
Homepage = "https://rotational.io/"
Documentation = "https://github.com/rotationalio/django-kubernetes"
Repository = "https://github.com/rotationalio/django-kubernetes"
Issues = "https://github.com/rotationalio/django-kubernetes/issues"
Changelog = "https://github.com/rotationalio/django-kubernetes/releases"