[build-system]
requires = [
  "setuptools>=69.3",
  "setuptools-scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = [
  "version",
  "dependencies"
]

name = "django-kubernetes"
description = "Middleware for Kubernetes probes and Django management commands for Kubernetes jobs."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">= 3.10"

authors = [
  {name = "Rotational Labs", email = "support@rotational.io"},
]

classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

keywords = [
    "django", "kubernetes",
    "liveness", "readiness", "probes", "health checks",
    "management commands", "ensure admin user", "migrations",
]

[project.urls]
Homepage = "https://rotational.io/"
Documentation = "https://github.com/rotationalio/django-kubernetes"
Repository = "https://github.com/rotationalio/django-kubernetes"
Issues = "https://github.com/rotationalio/django-kubernetes/issues"
Changelog = "https://github.com/rotationalio/django-kubernetes/releases"

[tool.setuptools_scm]
version_file = "djk8s/version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
